# GigaLearnCPP-Leak

./: .gitignore  CMakeLists.txt  COLLECTION_SPEED.md  CUDA_ACCELERATION.md  DEPLOY.md  DISTRIBUTED_TRAINING.md  LaunchRocketLeague_CleanEnv.bat  build.cmd  build.ps1  build.sh  build_clean.cmd  build_libtorch.sh  copy_cuda_vs_integration.cmd  copy_cuda_vs_integration.ps1  fix_push.ps1  push.sh  run_training.sh  setup_collision_meshes.sh  setup_libtorch.sh  upload_collision_meshes.ps1
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/RocketSim/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ActionParsers/: ContinuousAction.h  DefaultAction.cpp
GigaLearnCPP/RLGymCPP/src/RLGymCPP/EnvSet/: EnvSet.cpp
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ObsBuilders/: CustomObs.h  StreamlinedObs.cpp  StreamlinedObs.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Rewards/: CommonRewards.h
GigaLearnCPP/python_scripts/: __init__.py
GigaLearnCPP/src/private/GigaLearnCPP/: LearnerDistributed.cpp
GigaLearnCPP/src/private/GigaLearnCPP/Distributed/: DistributedProtocol.cpp  DistributedProtocol.h  DistributedTransport.cpp  RedisTransport.cpp
GigaLearnCPP/src/private/GigaLearnCPP/ObsBuilders/: CustomObs.cu  CustomObsCuda.cpp  CustomObsCuda.h  CustomObsCuda_constants.h
GigaLearnCPP/src/private/GigaLearnCPP/PPO/: ExperienceBuffer.cpp  GAE.cpp  GAE.cu  GAE_cuda.h  PPOLearner.cpp  PPOLearner.h
GigaLearnCPP/src/private/GigaLearnCPP/Util/: Models.cpp  Models.h
GigaLearnCPP/src/public/GigaLearnCPP/: Learner.cpp  Learner.h  LearnerConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/Distributed/: DistributedConfig.h  DistributedTransport.h  RedisTransport.h
GigaLearnCPP/src/public/GigaLearnCPP/PPO/: PPOLearnerConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/Util/: InferUnit.cpp  ModelConfig.h  Report.cpp  Timer.h  Utils.h
patches/: nccl-remove-compute-125.patch
rlbot/: CppPythonAgent.cfg
rlbot_build/src/: RLBotMain.cpp
src/: ExampleMain.cpp  RLBotClient.cpp  mechanoid example main.txt
src/Rewards/: CommonRewards.h
